v 1.3-1
  * Opera: links are sent to the popup not immediatly, but after a small timeout.
    This ensures that links arive after popup initialization.
    
v 1.3 24.05.2012
  * Chrome: CGM works again on GMail page (release 1.2 broke it).
  
v 1.2 23.05.2012
  * Added support for new GMail interface.
  * Removed donation buttons from popup.
  * Removed flattr button from options page.
  * Remove parameters from URL so that different URLs of the same service 
    result in the same custom menu.
  
v 1.1
  * Opera: added option to show/hide popup button on the toolbar.
  * Works on any Google page, not only Gmail.
  * Added Flattr donation button.
  * Added Yandex.Metrika statistics.
  - Does not work on Google Apps for Business.
  
v 1.0 13.10.2011
  * Initial release.