@@ -9,7 +9,7 @@
   </head>
   <body>
     <p id="informer"></p>
-    <div class="demo" id="list_area" style="visibility:hidden">
+    <div class="demo" id="list_area" style="visibility:visible">
         <p id="popup_usage_description">Drag items from one list to another. Press <a class="action save" href="#">Save</a> when you are done. Press <a href="#" class="action reset">Reset</a> to restore original Google™ menu.</p>
         <div class="ui-widget-content"><p id="visible_list_text">Visible list:</p>
             <ul id="visible" class="connectedSortable"> </ul>
